RESOLVED FIXED33660
[Chromium] Fix a bug that a selected word is not recognized as a spell-check source.
https://bugs.webkit.org/show_bug.cgi?id=33660
Summary [Chromium] Fix a bug that a selected word is not recognized as a spell-check ...
Kent Tamura
Reported 2010-01-14 01:50:58 PST
[Chromium] Fix a bug that a selected word is not recognized as a spell-check source.
Attachments
Patch (1.55 KB, patch)
2010-01-14 01:52 PST, Kent Tamura
jorlow: review+
jorlow: commit-queue-
Kent Tamura
Comment 1 2010-01-14 01:52:57 PST
Kent Tamura
Comment 2 2010-01-14 02:37:34 PST
The current implementation of isASingleWord() means: "true if the text has no characters."
Eric Seidel (no email)
Comment 3 2010-01-14 17:22:26 PST
You should CC people who you think could best review this. I'm not familiar with this code.
Kent Tamura
Comment 4 2010-01-14 18:33:43 PST
isASingleWord() implementation was changed during upstreaming WebKit API. The last revision in Chromium repository seems to have a correct implementation. http://src.chromium.org/viewvc/chrome/trunk/src/webkit/glue/context_menu_client_impl.cc?annotate=29390&pathrev=29813
Kent Tamura
Comment 5 2010-01-14 21:41:57 PST
(In reply to comment #4) > isASingleWord() implementation was changed during upstreaming WebKit API. > The last revision in Chromium repository seems to have a correct > implementation. > > http://src.chromium.org/viewvc/chrome/trunk/src/webkit/glue/context_menu_client_impl.cc?annotate=29390&pathrev=29813 Correction: It was changed by Chromium r29814, http://src.chromium.org/viewvc/chrome?view=rev&revision=29814, Moving it from webkit/glue/ to webkit/api/src.
Jeremy Orlow
Comment 6 2010-01-31 00:05:39 PST
Comment on attachment 46549 [details] Patch I don't know this code super well, but assuming this is just up-streaming a downstream fix (that was presumably reviewed): r=me
Kent Tamura
Comment 7 2010-01-31 17:45:51 PST
Note You need to log in before you can comment on or make changes to this bug.