2010-01-31  Kent Tamura  <tkent@chromium.org>

Reviewed by Jeremy Orlow.

        [Chromium] Fix a bug that a selected word is not recognized as a
        spell-check source.
        https://bugs.webkit.org/show_bug.cgi?id=33660

        * src/ContextMenuClientImpl.cpp:
        (WebKit::isASingleWord): Use wordBreakIterator(), and correctly check
        the return value of textBreakNext().

Canonical link: https://commits.webkit.org/45485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54119 268f45cc-cd09-0410-ab3c-d52691b4dbfc